[package]
name = "ckb-handler"
version = "0.1.0-alpha.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-pow = { git = "https://github.com/nervosnetwork/ckb", tag ="v0.31.0"}
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag ="v0.31.0"}
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag ="v0.31.0"}
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag ="v0.31.0"}

binding-macro = { path = "../../binding-macro" }
protocol = { path = "../../protocol", package = "muta-protocol" }
common-crypto = { path = "../../common/crypto" }
hasher = { version="0.1", features = ["hash-keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.15"
byteorder = "1.3"
hex = "0.4"
rand = "0.7"
muta-codec-derive = "0.2"
molecule = "0.6.0"
merkle-cbt = "0.2.2"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { path = "../../framework" }
ckb-sudt = { path = "../ckb-sudt" }
toml = "0.5"
